dev/test_programs/INVALID/group1/break.go
package test

func derp () {
	break
}
